figured out how to use stpopup

--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -485,6 +485,24 @@
             </objects>
             <point key="canvasLocation" x="1579" y="183"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="hCa-Hs-NW7">
+            <objects>
+                <viewController id="yoS-jo-wuS" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dHk-Vr-Zqy"/>
+                        <viewControllerLayoutGuide type="bottom" id="iby-Hb-kBt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qpr-36-000">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Oq-OR-kmS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1596" y="838"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Bullet Point" width="8" height="8"/>
