--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -483,33 +483,72 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IDA-rk-Nl0">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="599"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" alpha="0.59999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oar-Mu-Kzo">
-                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
-                                <color key="backgroundColor" red="0.83137254900000002" green="0.83529411760000005" blue="0.84313725490000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B5R-Ya-bip">
+                                <rect key="frame" x="0.0" y="599" width="375" height="68"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ION-Gy-9OT">
+                                        <rect key="frame" x="78" y="14" width="220" height="40"/>
+                                        <subviews>
+                                            <button opaque="NO" alpha="0.59999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oar-Mu-Kzo">
+                                                <rect key="frame" x="0.0" y="0.0" width="102" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="4bg-V2-6DK"/>
+                                                    <constraint firstAttribute="width" constant="102" id="dm1-EU-ZM4"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                <state key="normal" title="Clear" backgroundImage="Custom Question Bubble">
+                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" alpha="0.60000002384185791" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EDg-Md-mMv">
+                                                <rect key="frame" x="118" y="0.0" width="102" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="J0x-7v-Row"/>
+                                                    <constraint firstAttribute="width" constant="102" id="fO9-jQ-yTu"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                <state key="normal" title="Save" backgroundImage="Custom Question Bubble">
+                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="220" id="kHd-Wy-yKz"/>
+                                            <constraint firstAttribute="height" constant="40" id="yWj-eD-RAU"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.83137254900000002" green="0.83529411760000005" blue="0.84313725490000002" alpha="0.57194890202702697" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="c7X-GF-NNa"/>
+                                    <constraint firstAttribute="height" constant="68" id="5Y9-6D-Q05"/>
+                                    <constraint firstItem="ION-Gy-9OT" firstAttribute="centerX" secondItem="B5R-Ya-bip" secondAttribute="centerX" id="eIK-4E-wpS"/>
+                                    <constraint firstItem="ION-Gy-9OT" firstAttribute="centerY" secondItem="B5R-Ya-bip" secondAttribute="centerY" id="ePL-h1-nAe"/>
+                                    <constraint firstAttribute="trailing" secondItem="ION-Gy-9OT" secondAttribute="trailing" constant="20" id="f0L-zg-BvB"/>
+                                    <constraint firstItem="ION-Gy-9OT" firstAttribute="leading" secondItem="B5R-Ya-bip" secondAttribute="leading" constant="20" id="xE3-AY-97k"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <state key="normal" title="Save">
-                                    <color key="titleColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="f0L-zg-BvB"/>
+                                        <exclude reference="xE3-AY-97k"/>
+                                    </mask>
+                                </variation>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="B5R-Ya-bip" firstAttribute="leading" secondItem="qpr-36-000" secondAttribute="leading" id="4DR-EJ-Lzn"/>
+                            <constraint firstItem="iby-Hb-kBt" firstAttribute="top" secondItem="B5R-Ya-bip" secondAttribute="bottom" id="AKG-Id-ocA"/>
                             <constraint firstAttribute="trailing" secondItem="IDA-rk-Nl0" secondAttribute="trailing" id="Os5-kp-djp"/>
-                            <constraint firstAttribute="trailing" secondItem="oar-Mu-Kzo" secondAttribute="trailing" id="RnI-uO-7IR"/>
-                            <constraint firstItem="oar-Mu-Kzo" firstAttribute="top" secondItem="IDA-rk-Nl0" secondAttribute="bottom" id="gBi-z0-UO4"/>
+                            <constraint firstAttribute="trailing" secondItem="B5R-Ya-bip" secondAttribute="trailing" id="e71-bo-V9p"/>
                             <constraint firstItem="IDA-rk-Nl0" firstAttribute="leading" secondItem="qpr-36-000" secondAttribute="leading" id="iLN-AI-3OK"/>
                             <constraint firstItem="IDA-rk-Nl0" firstAttribute="top" secondItem="qpr-36-000" secondAttribute="top" id="rBc-em-8wW"/>
-                            <constraint firstItem="iby-Hb-kBt" firstAttribute="top" secondItem="oar-Mu-Kzo" secondAttribute="bottom" id="rKV-pO-oiN"/>
-                            <constraint firstItem="oar-Mu-Kzo" firstAttribute="leading" secondItem="qpr-36-000" secondAttribute="leading" id="zor-C9-CEP"/>
+                            <constraint firstItem="B5R-Ya-bip" firstAttribute="top" secondItem="IDA-rk-Nl0" secondAttribute="bottom" id="xWS-Yx-Ppu"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
