--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -486,7 +486,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="599"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B5R-Ya-bip">
@@ -505,6 +506,9 @@
                                                 <state key="normal" title="Clear" backgroundImage="Custom Question Bubble">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="clearText:" destination="yoS-jo-wuS" eventType="touchUpInside" id="1RC-br-VH4"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" alpha="0.60000002384185791" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EDg-Md-mMv">
                                                 <rect key="frame" x="118" y="0.0" width="102" height="40"/>
@@ -516,6 +520,9 @@
                                                 <state key="normal" title="Save" backgroundImage="Custom Question Bubble">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="save:" destination="yoS-jo-wuS" eventType="touchUpInside" id="x3q-Wv-Trh"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -523,13 +530,23 @@
                                             <constraint firstAttribute="height" constant="40" id="yWj-eD-RAU"/>
                                         </constraints>
                                     </stackView>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="Nta-PX-C8N">
+                                        <rect key="frame" x="202" y="24" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="d0Q-0g-n37"/>
+                                            <constraint firstAttribute="width" constant="20" id="z8A-6V-4gO"/>
+                                        </constraints>
+                                        <color key="color" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.83137254900000002" green="0.83529411760000005" blue="0.84313725490000002" alpha="0.57194890202702697" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68" id="5Y9-6D-Q05"/>
+                                    <constraint firstItem="Nta-PX-C8N" firstAttribute="centerY" secondItem="EDg-Md-mMv" secondAttribute="centerY" id="JuQ-hq-ZMs"/>
                                     <constraint firstItem="ION-Gy-9OT" firstAttribute="centerX" secondItem="B5R-Ya-bip" secondAttribute="centerX" id="eIK-4E-wpS"/>
                                     <constraint firstItem="ION-Gy-9OT" firstAttribute="centerY" secondItem="B5R-Ya-bip" secondAttribute="centerY" id="ePL-h1-nAe"/>
                                     <constraint firstAttribute="trailing" secondItem="ION-Gy-9OT" secondAttribute="trailing" constant="20" id="f0L-zg-BvB"/>
+                                    <constraint firstItem="EDg-Md-mMv" firstAttribute="leading" secondItem="Nta-PX-C8N" secondAttribute="trailing" constant="-26" id="lva-q5-Wni"/>
                                     <constraint firstItem="ION-Gy-9OT" firstAttribute="leading" secondItem="B5R-Ya-bip" secondAttribute="leading" constant="20" id="xE3-AY-97k"/>
                                 </constraints>
                                 <variation key="default">
@@ -552,6 +569,11 @@
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="theActivitySpinner" destination="Nta-PX-C8N" id="GVi-bs-w0p"/>
+                        <outlet property="theDescriptionTextView" destination="IDA-rk-Nl0" id="nVW-oa-Ava"/>
+                        <outlet property="theSaveButton" destination="EDg-Md-mMv" id="azB-wa-dGN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Oq-OR-kmS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
